<?xml version="1.0"?>
<package>
  <name>rosplan_starter_rcll</name>
  <version>0.1.0</version>
  <description>Start ROSPlan planning once RCLL game starts</description>

  <maintainer email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</maintainer>
  <author email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rosplan_interface_rcllrefbox</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>rcll_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>rcll_ros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
